--- a/public/client.html
+++ b/public/client.html
@@ -108,6 +108,16 @@
             margin: 0;
         }
 
+        .header-actions {
+            position: absolute;
+            right: 15px;
+            top: calc(50% + 10px);
+            transform: translateY(-50%);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
         .header-action-btn {
             background: none;
             border: none;
@@ -115,10 +125,8 @@
             padding: 5px;
             color: #555;
             line-height: 1;
-            position: absolute;
-            right: 20px;
-            /* Align with title: 10px padding + 5px handle + 10px margin */
-            top: 23px;
+            position: static;
+            /* Was absolute */
         }
 
         #collapse-button {
@@ -987,8 +995,18 @@
                 flex-grow: 1;
             }
 
+            .header-actions {
+                position: static;
+                transform: none;
+                gap: 0;
+            }
+
             .header-action-btn {
                 position: static;
+                margin-left: 10px;
+            }
+
+            #collapse-button {
                 margin-left: 10px;
             }
 
@@ -1033,19 +1051,28 @@
         <div class="panel-header">
             <div class="panel-handle"></div>
             <h1 class="panel-title">Upcoming Events</h1>
-            <button id="add-event-btn" class="header-action-btn" title="Submit a new event">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <line x1="12" y1="5" x2="12" y2="19"></line>
-                    <line x1="5" y1="12" x2="19" y2="12"></line>
-                </svg>
-            </button>
-            <div id="collapse-button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-                    <line x1="9" y1="3" x2="9" y2="21"></line>
-                </svg>
+            <div class="header-actions">
+                <button id="refresh-events-btn" class="header-action-btn" title="Refresh events list">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="23 4 23 10 17 10"></polyline>
+                        <path d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"></path>
+                    </svg>
+                </button>
+                <button id="add-event-btn" class="header-action-btn" title="Submit a new event">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="12" y1="5" x2="12" y2="19"></line>
+                        <line x1="5" y1="12" x2="19" y2="12"></line>
+                    </svg>
+                </button>
+                <div id="collapse-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                        <line x1="9" y1="3" x2="9" y2="21"></line>
+                    </svg>
+                </div>
             </div>
         </div>
         <div class="panel-content">
@@ -1205,6 +1232,7 @@
             const mapElement = document.getElementById('map');
             const detailBackButton = document.getElementById('detail-back-button');
             const searchInput = document.getElementById('search-input');
+            const refreshEventsBtn = document.getElementById('refresh-events-btn');
             const loadingOverlay = document.getElementById('loading-overlay');
             const scrollToTopBtn = document.getElementById('scroll-to-top-btn');
             const addEventBtn = document.getElementById('add-event-btn');
@@ -1549,9 +1577,26 @@
                 }
             });
 
+            const formatDateTimeLocal = (date) => {
+                if (!(date instanceof Date) || isNaN(date)) return '';
+                // Create a copy to avoid mutating the original date object
+                const tempDate = new Date(date);
+                // Adjust for timezone offset to display correctly in user's local time
+                tempDate.setMinutes(tempDate.getMinutes() - tempDate.getTimezoneOffset());
+                return tempDate.toISOString().slice(0, 16);
+            };
+
             addEventBtn.addEventListener('click', () => {
                 submissionForm.reset();
                 photoPreview.innerHTML = '<span class="preview-text">Preview</span>';
+
+                // Set default start and end times for today
+                const today = new Date();
+                const defaultStart = new Date(today.getFullYear(), today.getMonth(), today.getDate(), 8, 0, 0); // 8:00 AM
+                const defaultEnd = new Date(today.getFullYear(), today.getMonth(), today.getDate(), 14, 0, 0); // 2:00 PM
+                eventStartInput.value = formatDateTimeLocal(defaultStart);
+                eventEndInput.value = formatDateTimeLocal(defaultEnd);
+
                 // Clear all previous validation errors
                 submissionForm.querySelectorAll('.is-invalid').forEach(el => clearError(el));
                 submissionModal.classList.add('visible');
@@ -1640,6 +1685,8 @@
                 listPanel.classList.remove('closed');
                 mapElement.classList.remove('panel-closed');
             });
+
+            refreshEventsBtn.addEventListener('click', refreshEvents);
 
             searchInput.addEventListener('input', filterAndDisplayEvents);
 
@@ -2277,6 +2324,35 @@
                 updateDebugOverlay();
             }
 
+            async function refreshEvents() {
+                const refreshIcon = refreshEventsBtn.querySelector('svg');
+                refreshEventsBtn.disabled = true;
+                if (refreshIcon) {
+                    refreshIcon.style.animation = 'spin 1s linear infinite';
+                }
+
+                try {
+                    const response = await fetch(eventsApiUrl);
+                    if (!response.ok) {
+                        throw new Error('Failed to fetch updated events.');
+                    }
+                    const newEvents = await response.json();
+                    allEvents = newEvents;
+                    allEvents.sort((a, b) => new Date(a.start_datetime) - new Date(b.start_datetime));
+                    filterAndDisplayEvents();
+                } catch (error) {
+                    console.error('Error refreshing events:', error);
+                    alert(error.message);
+                } finally {
+                    setTimeout(() => {
+                        refreshEventsBtn.disabled = false;
+                        if (refreshIcon) {
+                            refreshIcon.style.animation = '';
+                        }
+                    }, 500);
+                }
+            }
+
 
             // --- API and Map Logic ---
             const eventsApiUrl = '/api/events';
@@ -2624,38 +2700,38 @@
             script.defer = true;
             window.initMap = initMap;
             document.head.appendChild(script);
-        });
 
-        // --- Accessibility: Close modal on Escape key ---
-        document.addEventListener('keydown', (e) => {
-            if (e.key === 'Escape' && detailPanel.classList.contains('open')) {
-                closeDetailPanel();
-            }
-        });
+            // --- Accessibility: Close modal on Escape key ---
+            document.addEventListener('keydown', (e) => {
+                if (e.key === 'Escape' && detailPanel.classList.contains('open')) {
+                    closeDetailPanel();
+                }
+            });
 
-        // --- Accessibility: Trap focus within the detail panel ---
-        detailPanel.addEventListener('keydown', (e) => {
-            if (e.key !== 'Tab' || !detailPanel.classList.contains('open')) return;
+            // --- Accessibility: Trap focus within the detail panel ---
+            detailPanel.addEventListener('keydown', (e) => {
+                if (e.key !== 'Tab' || !detailPanel.classList.contains('open')) return;
 
-            const focusableElements = Array.from(detailPanel.querySelectorAll(
-                'a[href]:not([disabled]), button:not([disabled]), textarea:not([disabled]), input:not([disabled]), select:not([disabled])'
-            )).filter(el => el.offsetParent !== null); // Check for visibility
+                const focusableElements = Array.from(detailPanel.querySelectorAll(
+                    'a[href]:not([disabled]), button:not([disabled]), textarea:not([disabled]), input:not([disabled]), select:not([disabled])'
+                )).filter(el => el.offsetParent !== null); // Check for visibility
 
-            if (focusableElements.length === 0) return;
+                if (focusableElements.length === 0) return;
 
-            const firstElement = focusableElements[0];
-            const lastElement = focusableElements[focusableElements.length - 1];
-            const isShiftPressed = e.shiftKey;
+                const firstElement = focusableElements[0];
+                const lastElement = focusableElements[focusableElements.length - 1];
+                const isShiftPressed = e.shiftKey;
 
-            if (!isShiftPressed && document.activeElement === lastElement) {
-                firstElement.focus();
-                e.preventDefault();
-            }
+                if (!isShiftPressed && document.activeElement === lastElement) {
+                    firstElement.focus();
+                    e.preventDefault();
+                }
 
-            if (isShiftPressed && document.activeElement === firstElement) {
-                lastElement.focus();
-                e.preventDefault();
-            }
+                if (isShiftPressed && document.activeElement === firstElement) {
+                    lastElement.focus();
+                    e.preventDefault();
+                }
+            });
         });
     </script>
     <script>
