--- a/public/client.html
+++ b/public/client.html
@@ -35,6 +35,7 @@
         <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://gapi-3iew.onrender.com"
             alt="QR Code for mobile access">
     </div>
+    </div>
 
     <div id="qr-modal">
         <img src="https://api.qrserver.com/v1/create-qr-code/?size=400x400&data=https://gapi-3iew.onrender.com"
