implement first draft of marker clustering

--- a/public/client.html
+++ b/public/client.html
@@ -219,6 +219,7 @@
             });
         }
     </script>
+    <script src="/markercluster.js" defer></script>
     <script src="/client.js" defer></script>
 </body>
 
