--- a/public/client.html
+++ b/public/client.html
@@ -62,13 +62,18 @@
                         <line x1="5" y1="12" x2="19" y2="12"></line>
                     </svg>
                 </button>
-                <div id="collapse-button">
+                <button id="settings-btn" class="header-action-btn" title="Settings">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"/>
+                    </svg>
+                </button>
+                <button id="collapse-button" class="header-action-btn" title="Collapse Panel">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
                         <line x1="9" y1="3" x2="9" y2="21"></line>
                     </svg>
-                </div>
+                </button>
             </div>
         </div>
         <div class="panel-content">
@@ -79,6 +84,9 @@
                     <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                 </svg>
                 <input type="search" id="search-input" placeholder="Search by title or description...">
+                <div id="clear-filters-wrapper" style="display: none;">
+                    <button id="clear-all-filters-btn" class="clear-filters-btn">Clear All Filters</button>
+                </div>
             </div>
             <div class="pills-wrapper">
                 <div id="sale-type-pills-container" class="pills-container"></div>
@@ -207,6 +215,46 @@
         </div>
     </div>
 
+    <div id="settings-modal" class="modal-overlay">
+        <div class="modal-content">
+            <h2>Settings</h2>
+            <div class="settings-content">
+                <div class="settings-item">
+                    <label for="clustering-toggle">Cluster Map Pins</label>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="clustering-toggle" class="toggle-switch-checkbox">
+                        <label class="toggle-switch-label" for="clustering-toggle"></label>
+                    </div>
+                </div>
+                <div class="settings-item">
+                    <label>Map Type</label>
+                    <div class="segmented-control">
+                        <input type="radio" id="map-type-roadmap" name="map-type" value="roadmap" checked>
+                        <label for="map-type-roadmap">Map</label>
+                        <input type="radio" id="map-type-satellite" name="map-type" value="satellite">
+                        <label for="map-type-satellite">Satellite</label>
+                    </div>
+                </div>
+                <div class="settings-item">
+                    <label for="debug-toggle">Show Debug Info</label>
+                    <div class="toggle-switch">
+                        <input type="checkbox" id="debug-toggle" class="toggle-switch-checkbox">
+                        <label class="toggle-switch-label" for="debug-toggle"></label>
+                    </div>
+                </div>
+                <div class="settings-item">
+                    <label for="zoom-level-slider">Default Zoom</label>
+                    <div class="zoom-control">
+                        <input type="range" id="zoom-level-slider" min="10" max="18" step="1">
+                        <span id="zoom-level-value">12</span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-actions">
+                <button type="button" id="close-settings-btn" class="btn-primary">Done</button>
+            </div>
+        </div>
+    </div>
 
     <script>
         if ('serviceWorker' in navigator) {
