--- a/public/client.html
+++ b/public/client.html
@@ -137,46 +137,49 @@
     </div>
 
     <div id="submission-modal" class="modal-overlay">
-        <div class="modal-content">
+        <div class="modal-content modal-content--layout-flex">
             <h2>Submit a New Event</h2>
             <form id="submission-form">
-                <div class="form-group">
-                    <label for="event-title">Title</label>
-                    <input type="text" id="event-title" name="title" required>
-                </div>
-                <div class="form-group">
-                    <label for="event-description">Description</label>
-                    <textarea id="event-description" name="description" rows="3" required></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="event-address">Address</label>
-                    <input type="text" id="event-address" name="address" required
-                        placeholder="e.g., 123 Main St, Ottawa, ON">
-                </div>
-                <div class="form-group">
-                    <label>Photo (Optional)</label>
-                    <div id="photo-upload-group">
-                        <div id="photo-preview">
-                            <span class="preview-text">Preview</span>
-                        </div>
-                        <input type="file" id="event-photo" name="photo" accept="image/*">
+                <div class="form-scroll-content">
+                    <div class="form-group">
+                        <label for="event-title">Title</label>
+                        <input type="text" id="event-title" name="title" required>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="event-start">Start Time</label>
-                    <input type="datetime-local" id="event-start" name="start_datetime" required>
-                </div>
-                <div class="form-group">
-                    <label for="event-end">End Time</label>
-                    <input type="datetime-local" id="event-end" name="end_datetime" required>
-                </div>
-                <div class="form-group">
-                    <label for="event-sale-type">Sale Type</label>
-                    <select id="event-sale-type" name="sale_type_id" required></select>
-                </div>
-                <div class="form-group">
-                    <label>Item Categories</label>
-                    <div id="event-categories-container" class="checkbox-group"></div>
+                    <div class="form-group">
+                        <label for="event-description">Description</label>
+                        <textarea id="event-description" name="description" rows="3" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="event-address">Address</label>
+                        <input type="text" id="event-address" name="address" required
+                            placeholder="e.g., 123 Main St, Ottawa, ON">
+                    </div>
+                    <div class="form-group">
+                        <label>Photo (Optional)</label>
+                        <div id="photo-upload-group">
+                            <div id="photo-preview">
+                                <span class="preview-text">Preview</span>
+                            </div>
+                            <input type="file" id="event-photo" name="photo" accept="image/*">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="event-start">Start Time</label>
+                        <input type="datetime-local" id="event-start" name="start_datetime" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="event-end">End Time</label>
+                        <input type="datetime-local" id="event-end" name="end_datetime" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Sale Type</label>
+                        <div id="event-sale-type-pills" class="pill-select-group"></div>
+                        <input type="hidden" id="event-sale-type-hidden" name="sale_type_id" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Item Categories</label>
+                        <div id="event-categories-container" class="checkbox-group"></div>
+                    </div>
                 </div>
                 <div class="form-actions">
                     <button type="button" id="cancel-submission-btn" class="btn-secondary">Cancel</button>
