--- a/public/client.html
+++ b/public/client.html
@@ -12,6 +12,14 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-title" content="Events Map">
+    <style>
+        /* Add extra space at the bottom of the navigation when in standalone "app mode" */
+        body.standalone-app #bottom-nav {
+            /* Using padding-bottom is better than margin for fixed-bottom elements. */
+            /* It ensures the background color extends to the screen edge, which is crucial for accommodating the "home indicator" on modern mobile devices. */
+            padding-bottom: 5px;
+        }
+    </style>
 </head>
 
 <body>
@@ -297,6 +305,28 @@
     </div>
 
     <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            /**
+             * Checks if the web app is running on a mobile device and/or in standalone "app mode".
+             */
+            function checkDisplayMode() {
+                // 1. Check for standalone "app mode" (PWA installed on home screen)
+                const isInStandaloneMode = window.matchMedia('(display-mode: standalone)').matches;
+
+                // You can use this to apply specific styles or run certain scripts
+                if (isInStandaloneMode) {
+                    console.log('App is running in standalone mode.');
+                    document.body.classList.add('standalone-app');
+                } else {
+                    console.log('App is running in a browser tab.');
+                }
+
+                // 2. A simple check for a mobile device based on user agent
+                const isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+                console.log(`Is mobile device: ${isMobile}`);
+            }
+            checkDisplayMode();
+        });
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/service-worker.js').then(registration => {
