initial logo added

--- a/public/client.html
+++ b/public/client.html
@@ -7,6 +7,7 @@
     <title>Upcoming Garage Sales Map</title>
     <link rel="stylesheet" href="/css/shared.css">
     <link rel="stylesheet" href="/css/client.css">
+    <link rel="stylesheet" href="/css/logo.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
     <meta name="mobile-web-app-capable" content="yes">
@@ -106,6 +107,16 @@
 </head>
 
 <body>
+
+    <div class="logo-container">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 100">
+            <text x="0" y="40" font-family="Arial" font-size="48" fill="#333" stroke="#FFF" stroke-width="1.5px" stroke-linejoin="round" paint-order="stroke fill">
+                garagesailing
+            </text>
+            <text x="283" y="40" font-family="Arial" font-size="48" fill="#FF5733" stroke="#FFF" stroke-width="1.5px" stroke-linejoin="round" paint-order="stroke fill">.</text>
+            <text x="15" y="80" font-family="Arial" font-size="48" fill="#FF5733" stroke="#FFF" stroke-width="1.5px" stroke-linejoin="round" paint-order="stroke fill">today</text>
+        </svg>
+    </div>
 
     <div id="update-toast" class="toast">
         A new version is available.
