fixing real mobile device error on refresh button click

--- a/public/client.html
+++ b/public/client.html
@@ -14,6 +14,10 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-title" content="Events Map">
+
+    <!-- Load polyfills first -->
+    <script src="/js/polyfills.js"></script>
+
 </head>
 
 <body>
